--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
         
         <div class="top">
             <div class="budget">
-                <div class="budget__title">
-                    Available Budget in <span class="budget__title--month">%Month%</span>:
+                <div class="budget__title"><span class="budget__title--month"></span> өрхийн төсөв:
                 </div>
                 
                 <div class="budget__value">+ 2,345.64</div>
