--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
         <div class="top">
             <div class="budget">
-                <div class="budget__title"><span class="budget__title--month"></span> өрхийн төсөв:
+                <div class="budget__title"><span class="budget__title--month"></span> өрхийн төсвийн систем:
                 </div>
                 
                 <div class="budget__value">+ 2,345.64</div>
